src/App.css
/* ... */
/* Roboto Condensed overrides INSIDE scripture-content containers: the
   tag/block detail copy, the tagged-block description, the parallel-table
   block headings (gray & blue rows), and the tag-tree title are all
   editorial/UI prose, not scripture. Force font-style:normal so any
   inherited italic from the prior Scripture styling is cleared. */
body #text .detail,
body #text .taggedblock .desc,
body #text > table.parallel .meta td,
body .tagtitle
{
	font-family: 'Roboto Condensed', 'Helvetica Neue', 'Arial Narrow', Arial, sans-serif;
	font-style: normal;
}
#root
{
	margin: auto;
    position: static;
    width: auto;
    height:100%;
}

#approot
{
    background-color: #FFFFFF;
    margin: auto;
    /* Fill the viewport. The 4-column layout (col1/col2b/col2 floats + col3
       fluid centre) needs ~1820px for col3 to stay above its min-width; below
       that we let the page scroll horizontally rather than snap to a smaller
       fixed layout. */
    width: 100%;
    min-width: 1820px;
    height: 100%;
    color: #000000;
    background-color: #333;
    position: relative;
}

.wrapper
{
	overflow: auto;
    position: absolute;
    right: 0px;
    left: 0px;
    bottom: 0px;
    top: 40px;
    overflow: hidden;
    margin: 10px;
}

.react-player
{
	width:0; height:0;
}



/* body.ie, body.firefox { 	font-family: Cambria, Georgia, serif; } */



/* CHROME, default */

body div.taglink,
body #book div.verse_grid,
body #outline div.verse_grid,
body #audio_heading div,
body #audio_heading > button,
body .tipsy-pedigree,
body .tipsyStructure,
body span.label,
body  a.ref,
body  span.isa,
body .seqcircle,
body .label,
body .tagref,
body #chiastic_blocks,
body tr.metaref td div,
#placeholder
{
	font-family: 'Comfortaa', Helvetica, Arial, sans-serif;
}


body.ie #text div.chiastic_column
{
	width:229px;

}

.sbs .Tipsy-inner
{
	color:white;
	max-width:1000px;
	background-color:#555;
	
}
.vernum
{
	border:1px solid black;
	float:right;
	position:relative;
	top:-10px;
	height:15px;
	line-height:15px;
	background-color:#DDD;
	color:#000;
	font-weight:bold;
	padding-left:10px;
	padding-right:10px;
	font-family: 'Comfortaa', Helvetica, Arial, sans-serif;
	font-size:10px;
	cursor:pointer;
	border-top-left-radius:10px;
	border-bottom-left-radius:10px;
	
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
	
}

#audio_commentary
{
	position:relative;
}

.extraversions
{
	border-bottom: 3px double #999;
	padding-bottom:15px;
}
.extraversions table
{
	border-collapse: collapse;
} 
.extraversions tr.cells td
{
	vertical-align: text-top;
	font-size:16px;
	line-height:16px;
	border:1px solid #BBB;
	padding:10px;
	letter-spacing:-0.5px;
	overflow:hidden;
}

.extraversions tr.head td
{
	text-align:center;
	cursor:pointer;
}
.extraversions tr.head td img
{
	border:1px solid #777;
	max-width: 95px;
	cursor:pointer;
}

.extraversions.count2 td div{ width:227px; }
.extraversions.count3 td div{ width:145px; }
.extraversions.count4 td div{ width:103px; text-align:left; }
.extraversions.count5 td div{ width:79px;text-align:left;  }


h1
{
	  font-variant: small-caps;
}

h1 img.settings
{
	float:right;
	margin-right:10px;
	margin-top:5px;
}

h1 img.demo
{
	float:left;
	margin-left:10px;
	margin-top:1px;
}




h1
{
	text-align:center;
	width:100%;
    background-color:#444;
    margin:0;
    height:40px;
    color:white;
    line-height: 40px;
    letter-spacing:10px;
}



.col {

    vertical-align: top;
    height:100%;
    margin-left:10px;
    position:relative;
}

.col1 {
    width: 491px; float:left;
	margin-left:0px;

}
.col2 {
    width: 560px; float:right;
}

.col3 {
	margin-left:820px;
	margin-right:570px;
    min-width:400px;
}
.col2b {


    width: 310px; float:left;
    /*
    left:625px;
    height:400px;

    position:absolute;
    bottom:0px;
    width:310px;
    margin:0;
    */
}
.hidden
{
	display:none;
}
div#book,div#verse,div#text,div#outline,div#book_meta,div#outline_meta,div#version_meta
{
    border:1px solid #555;
    position:absolute;
    right:0;
    left:0;
    bottom:0;
    top:67px;
    overflow-y:auto;
    overflow-x:hidden;
	background-color:#FFF;
}


div#book_meta,div#outline_meta,div#version_meta
{
	overflow-y:scroll;
	padding-right: 5px;
    /* transition: visibility 0.5s,  bottom 0.5s ease-out; */
  	bottom:100%;
  	visibility: hidden;
}

div#book_meta.meta.visible,
div#outline_meta.meta.visible,
div#version_meta.meta.visible
{
  visibility: visible;
  transition: visibility 0s,  bottom 0.2s ease-in;
  bottom:0;
}

.text_heading
{
	background-color: #EEE;
	color:black;
	padding: 5px;
	height: 60px;
	line-height: 30px;
}

.infoOpen .text_heading
{

	height: 360px;
	transition: height 0.5s;
}
 .heading_subtitle,
.text_heading,
.heading_title
{
	font-weight:700;
}

div.verse_grid,
h1,h2,h3,h4,h5,.heading div,.tagtree div,.meta div,.desc ,.detail,.taglink,.verse_info_box ,.readmore, #seefax,
#user_prefs div,#user_prefs span,#user_prefs p, #approot.commentaryMode #commentary_text p

{
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  
}

#approot.commentaryMode #commentary_text p
{
  cursor:context-menu;
	
}


div#text
{

    top:137px;
    overflow-y:scroll;
    font-size: 1.1rem;
    cursor: pointer;
    line-height: 1.1;
}


#approot.infoOpen div#text
{

    top:437px;
	transition: top 0.5s;
}

#approot.commentaryMode div#version_meta
{

    top:510px;
}
#approot.commentaryMode div#text
{

    top:583px;
	transition: top 0.5s;
}



#approot:not(.commentaryMode) #commentary_text
{
	height:0px;
	visibility:hidden;
	padding:0;
	border:0;
	margin:0;
	cursor:context-menu;
}
#approot.commentaryMode #commentary_text
{
	height:371px;
	visibility:visible;
	transition: height 0.5s;
}
/* ... */

